--- a/src/style.css
+++ b/src/style.css
@@ -8,8 +8,9 @@ html{
     scroll-behavior: smooth;
 }
 body{
-    background: white;
-    color: #2a2438;
+    /* background: black; */
+    color: white;
+    background-image: url("images/bgwallpaper.jpeg");
 }
 
 #header{
@@ -37,7 +38,7 @@ nav ul li {
 }
 
 nav ul li a{
-    color: black;
+    color: white;
     text-decoration: none;
     font-size: 18px;
     position: relative;
@@ -47,7 +48,8 @@ nav ul li a::after{
     content: '';
     width: 0;
     height: 3px;
-    background: #385170;
+    /* background: #385170; */
+    background: red;
     position: absolute;
     left: 0%;
     bottom: -6px;
@@ -57,18 +59,41 @@ nav ul li a::after{
 nav ul li a:hover::after{
     width: 100%;
 }
-
+.header-content {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
 .header-text{
     margin-top: 20%;
     font-size: 30px;
-    text-align: center;
+    text-align: left;
+}
+
+.header-text h1 i{
+    color: red;
+}
+
+.btn{
+    display:block;
+    margin: 50px auto;
+    width: fit-content;
+    border: 1px solid #ff004f;
+    padding:14px 50px;
+    border-radius: 6px;
+    text-decoration: none;
+    color: #fff;
+    transition: background 0.5s;
+}
+.btn:hover{
+    background: #ff004f;
 }
 
 /* about section */
 
 #about{
     padding: 80px 0;
-    color:#385170;
+    color:white;
 }
 .row{
     display: flex;
@@ -91,7 +116,7 @@ nav ul li a:hover::after{
 .sub-title{
     font-size: 60px;
     font-weight: 600;
-    color: black;
+    color: white;
 }
 
 .tab-titles{
@@ -111,7 +136,7 @@ nav ul li a:hover::after{
     content: '';
     width: 0;
     height: 3px;
-    background: #385170;
+    background: red;
     position: absolute;
     left: 0%;
     bottom: -6px;
@@ -128,7 +153,7 @@ nav ul li a:hover::after{
 }
 
 .tab-contents ul li span{
-    color: black;
+    color: lightblue;
     font-size: 14px;
 }
 
@@ -144,7 +169,7 @@ nav ul li a:hover::after{
 /* work-exp section */
 #workexp{
     padding: 80px 0;
-    color:#385170;
+    color:white;
 }
 
 
@@ -165,14 +190,14 @@ nav ul li a:hover::after{
     content: '';
     width: 0;
     height: 3px;
-    background: #385170;
+    background: red;
     position: absolute;
     left: 0%;
     bottom: -6px;
     transition: 0.5s;
 }
 
-.workexp-links.active-links::after{
+.workexp-links.active-link::after{
     width: 100%;
 }
 
@@ -182,16 +207,18 @@ nav ul li a:hover::after{
 }
 
 .workexp-contents ul span{
-    color: black;
+    color: lightblue;
     font-size: 14px;
 }
 
 .workexp-contents{
     display: none;
 }
-.workexp-contents.active-tabs{
+.workexp-contents.active-tab{
     display: block;
 }
+
+
 
 /* projects section */
 #projects-portfolio{
@@ -281,13 +308,13 @@ nav ul li a:hover::after{
     text-decoration: none;
     font-size: 30px;
     margin-right: 15px;
-    color: #385170;
+    color: white;
     display: inline-block;
     transition: transform 0.5s;
 }
 
 .social-icons a:hover{
-    color: #2a2438;
+    color: lightblue;
     transform: translateY(-5px);
 }
 
@@ -299,10 +326,33 @@ form input, form textarea{
     width:100%;
     border: 0;
     outline: none;
-    background: #2a2438;
+    background: #262626;
     padding: 15px;
     margin: 15px 0;
     color: white;
     font-size: 18px;
     border-radius: 6px;
 }
+.btn.btn2{
+    display: inline-block;
+   
+}
+form .btn2{
+    padding:14px 60px;
+    font-size: 18px;
+    margin-top:20px;
+    cursor:pointer;
+    background: #ff004f;
+}
+
+/* ------------------------css for small screen-------- */
+
+/* @media only screen and (max-width:600px){
+    .header-text{
+        margin-top: 100%;
+        font-size: 16px;
+    }
+    .header-text h1{
+        font-size: 30px;
+    }
+} */
