--- a/src/style.css
+++ b/src/style.css
@@ -313,8 +313,8 @@ nav ul li a:hover::after{
 }
 .certificate-list{
     display: flex;
-    /* grid-template-columns: repeat(auto-fit,minmax(250px,1fr));
-    grid-gap:40px; */
+    grid-template-columns: repeat(auto-fit,minmax(250px,1fr));
+    grid-gap:40px;
     margin-top: 50px;
 }
 .certificate{
